--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <div class="titulo">
             <picture><img src="imagem01.png"></picture>
         </div>
-        <nav><a href="#"><div class="menu">EQUIPE</div></a> | <a href="#"><div class="menu">GERÊNCIA</div></a></nav>
+        <nav><a href="https://dados-repositorio.github.io/avaliacao/"><div class="menu">EQUIPE</div></a> | <a href="#"><div class="menu">GERÊNCIA</div></a></nav>
     </article>
     <section>
-        <picture><img src="imagem02.png"></picture>
+        <picture><img src="imagem02.png" class="meio"></picture>
+    </section>
+    <section class="rodape">
+        <picture><img src="imagem03.png" class="meio"></picture>
     </section>
 </body>
-</html>l
+</html>
